<resources>
    <string name="app_name">Learning-App</string>
    <string name="barMenu">VICEN LEARNING APP</string>
    <string name="dummy_value">Wira Sukma Saputra</string>
    <string name="barMenu2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatu</string>
    <string name="login">Login</string>
    <string name="Signup">Signup</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Pelajari">Pelajari jadwal Anda</string>
    <string name="facebook">facebook</string>
    <string name="data">Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatu</string>
    <string name="CampingCuy">Camping
        Cuy</string>
    <string name="lorem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, to</string>
    <string name="asset">Welcome Universitas Kuningan Jawa Barat</string>
</resources>